# pickled-claude-plugins

./: .gitignore  .mise.toml  CLAUDE.md  LICENSE  README.md  hk.pkl  mise.toml
docs/: versioning.md  (+2 more)
plugins/buildkite/: README.md  pyproject.toml  tool-routes.yaml
plugins/buildkite/.claude-plugin/: plugin.json  routes.json
plugins/buildkite/config/: defaults.yml
plugins/buildkite/hooks/: check-bk-preference.sh  hooks.json
plugins/buildkite/skills/developing-pipelines/: SKILL.md
plugins/buildkite/skills/investigating-builds/: SKILL.md
plugins/buildkite/skills/working-with-buildkite-builds/: SKILL.md
plugins/buildkite/src/buildkite_hooks/: check.py
plugins/sandbox/: README.md  pyproject.toml
plugins/sandbox-first/: README.md  pyproject.toml
plugins/sandbox-first/.claude-plugin/: plugin.json
plugins/sandbox-first/hooks/: hooks.json
plugins/sandbox-first/skills/sandbox-first/: SKILL.md
plugins/sandbox-first/src/sandbox_first/: checker.py  cli.py  config.py  transcript.py
plugins/sandbox-first/tests/: conftest.py  test_checker.py  test_cli.py  test_config.py  test_transcript.py
plugins/sandbox/.claude-plugin/: plugin.json
plugins/sandbox/hooks/: hooks.json
plugins/sandbox/src/sandbox_plugin/: checker.py  cli.py  transcript.py
plugins/sandbox/tests/: conftest.py  test_checker.py  test_cli.py  test_transcript.py
plugins/tool-routing/: README.md  pyproject.toml
plugins/tool-routing/.claude-plugin/: plugin.json  routes.json
plugins/tool-routing/commands/: validate.md
plugins/tool-routing/docs/: architecture.md  cli-reference.md  route-discovery.md  writing-routes.md
plugins/tool-routing/docs/plans/: 2025-01-03-integration-tests-design.md  2025-01-03-integration-tests-implementation.md  2025-01-08-fix-cli-test-isolation.md
plugins/tool-routing/docs/retrospectives/: 2025-12-17-plugin-installation-consistency.md
plugins/tool-routing/docs/tests/: baseline-results.md  installation-scenarios.md
plugins/tool-routing/hooks/: hooks.json  tool-routes.yaml
plugins/tool-routing/scripts/: integration-test.sh
plugins/tool-routing/src/tool_routing/: __init__.py  __main__.py  checker.py  cli.py  config.py  discovery.py  integration_runner.py  test_runner.py
plugins/tool-routing/tests/: conftest.py  test_checker.py  test_cli.py  test_config.py  test_discovery.py  test_discovery_new.py  test_integration_runner.py  test_plugin_structure.py
plugins/writing-tools/: README.md  pyproject.toml
plugins/writing-tools/.claude-plugin/: plugin.json
plugins/writing-tools/docs/: DESIGN.md
plugins/writing-tools/hooks/: emdash-outbound.yaml  hooks.json
plugins/writing-tools/tests/: conftest.py  test_checker.py  test_cli.py  test_config.py
(+571 files in other folders)
