[project]
name = "buildkite-hooks"
version = "0.1.0"
description = "Claude Code plugin hooks for Buildkite tool preference enforcement"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
buildkite-check = "buildkite_hooks.check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
